# hoesik-vote-backend

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
.github/: copilot-instructions.md
.github/instructions/: api_spec.instructions.md  code_review.instructions.md  gitmoji.instructions.md  pytest_e2e.instructions.md  python.instructions.md
.github/prompts/: implement.prompt.md
.github/workflows/: pr-check.yml
app/: config.py  database.py  db.py  main.py  utils.py
app/api/: __init__.py  event.py  events.py  menu.py  vote.py
app/models/: __init__.py  event.py  menu.py  vote.py
app/repository/: __init__.py  event.py  event_repository.py  menu.py  menu_repository.py  vote.py  vote_repository.py
app/schemas/: __init__.py  event.py  menu.py  vote.py
app/service/: __init__.py  event.py  event_service.py  menu.py  menu_service.py  test_event.py  vote.py  vote_service.py
test/: conftest.py  test_events.py
tests/: test_event_create.py  test_event_list.py
